# familylist

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  plan.md
.claude/plans/: phase-4-home-assistant-integration.md  real-time-notifications.md
.github/workflows/: build.yml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  clerk_auth.py  config.py  database.py  dependencies.py  main.py  mcp_server.py  models.py  schemas.py  serializers.py
backend/app/api/: ai.py  categories.py  items.py  lists.py  push.py  query.py  shares.py  stream.py  users.py
backend/app/services/: ai_service.py  category_service.py  event_broadcaster.py  item_service.py  list_service.py  llm_service.py  notification_queue.py  push_service.py  user_service.py
backend/data/: familylist.db-shm  familylist.db-wal
backend/scripts/: migrate_users.py
backend/tests/: __init__.py  conftest.py  test_ai.py  test_items.py  test_lists.py  test_mcp.py  test_query.py  test_shares.py  test_url_extraction.py  test_users.py
cowork-plugin/: .mcp.json
cowork-plugin/.claude-plugin/: plugin.json
cowork-plugin/commands/: add-tasks.md  weekly-digest.md
cowork-plugin/skills/: efficient-queries.md  family-context.md  familylist-schema.md
custom_components/familylists/: README.md  __init__.py  api.py  const.py  coordinator.py  intent.py  manifest.json  sensor.py  services.yaml  strings.json  todo.py
docs/: beta-testing-checklist.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
homeassistant/: README.md  hacs.json
(+109 files in other folders)
